istio-simple-app/service-a.yaml
---
###################################################
# Service: myweb
###################################################
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: service-a
---
###################################################
# Deployment: myweb
###################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
      annotations:
          sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - image: nginx
        name: nginx
        livenessProbe:
         failureThreshold: 3
         httpGet:
             path: /
             scheme: HTTP
             port: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/
        ports:
        - containerPort: 80
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
