istio-simple-app/service-b-v1.yaml
---
#################################################
# Service: service-b
#################################################
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: service-b
---
#################################################
# Deployment: service-b v1
#################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  labels:
    app: service-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: index-html
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: index-html
        configMap:
          name: service-b-cm-v1
