istio-simple-app/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a-vsaaaaa
spec:
  hosts:
  - "myweb.example.com"
  gateways:
  - myweb-gateway
  http:
  - route:
      - destination:
          host: service-a
